correct broken css rule for water score

--- a/cacao.css
+++ b/cacao.css
@@ -649,7 +649,7 @@
 	width: 70px;
 	background-position: -80px -24px;
 }
-.counter-sun > DIV:not(.moving) {
+.counter-sun > DIV {
 	background-image:url(img/score.png);
 	background-position: 0 -24px;
 	height: 24px;
@@ -665,7 +665,7 @@
 }
 .counter-water {
 }
-.counter-water > DIV:not(.moving) {
+.counter-water > .value {
 	width: 223px;
 	height: 25px;
 	background-image: url(img/score_water.png);
